build/log/idf_py_stdout_output_14560
[1/12] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\vinic\High_boy\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Users/vinic/esp/v5.3.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/vinic/High_boy/build/bootloader/bootloader.bin"
Bootloader binary size 0x5490 bytes. 0x2b70 bytes (34%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/vinic/High_boy/build/config -IC:/Users/vinic/High_boy/main -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/newlib/platform_include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/config/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/config/include/freertos -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/config/xtensa/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/freertos/esp_additions/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/include/soc -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/dma/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/heap/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/log/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/soc/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/soc/esp32s3 -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/soc/esp32s3/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/hal/platform_port/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/hal/esp32s3/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/hal/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_rom/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_rom/include/esp32s3 -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_rom/esp32s3 -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_common/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_system/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_system/port/soc -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_system/port/include/private -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/xtensa/esp32s3/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/xtensa/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/xtensa/deprecated_include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/include/apps -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/include/apps/sntp -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/lwip/src/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/port/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/port/freertos/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/vinic/High_boy/components/I2C/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/driver/deprecated -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/driver/i2c/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/driver/touch_sensor/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/driver/twai/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_pm/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_ringbuf/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_gpio/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_pcnt/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_gptimer/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_spi/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_i2s/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/sdmmc/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_sdspi/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_sdio/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_dac/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_rmt/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_tsens/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_sdm/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_i2c/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_uart/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/vfs/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_ledc/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_parlio/include -IC:/Users/vinic/esp/v5.3.2/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/vinic/High_boy/components/st7789/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/vinic/High_boy=. -fmacro-prefix-map=C:/Users/vinic/esp/v5.3.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/vinic/High_boy/main/main.c
C:/Users/vinic/High_boy/main/main.c: In function 'app_main':
C:/Users/vinic/High_boy/main/main.c:15:27: warning: passing argument 1 of 'st7789_spi_init' from incompatible pointer type [-Wincompatible-pointer-types]
   15 |     ret = st7789_spi_init(&spi);
      |                           ^~~~
      |                           |
      |                           struct spi_device_t **
In file included from C:/Users/vinic/High_boy/main/main.c:5:
C:/Users/vinic/High_boy/components/st7789/include/st7789.h:25:47: note: expected 'spi_device_handle_t' {aka 'struct spi_device_t *'} but argument is of type 'struct spi_device_t **'
   25 | esp_err_t st7789_spi_init(spi_device_handle_t spi);         // Inicializa o barramento SPI
      |                           ~~~~~~~~~~~~~~~~~~~~^~~
C:/Users/vinic/High_boy/main/main.c:22:11: error: too many arguments to function 'st7789_init'
   22 |     ret = st7789_init(spi);
      |           ^~~~~~~~~~~
C:/Users/vinic/High_boy/components/st7789/include/st7789.h:31:11: note: declared here
   31 | esp_err_t st7789_init(void);                                // Inicializa o display ST7789
      |           ^~~~~~~~~~~
[5/12] Building C object esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj
ninja: build stopped: subcommand failed.
